--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </div>
 
       <h1 class="name"><strong>Đức</strong> Mạnh</h1>
-      <span class="job-title">Developer</span>
+      <span class="job-title">༼ つ ◕_◕ ༽つ</span>
       <span class="email">full-time programmer - sometimes writer - all-time clueless</span>
 
-      <h2 class="lead">Description</h2>
+      <h2 class="lead">about me...</h2>
       <p>
         Hi, i'm Đức and currently working as software developer. i graduated from FPT University in 2020. i mostly work
         with JavaScript and stack of technology built around it.
@@ -52,13 +52,14 @@
         <span class="exp">Languages</span>
         <div>
           <h3>JavaScript</h3>
-          <!-- <span>Software Developer</span> -->
+          <span>And HTML+CSS if u consider them as programming languages. Also some Java but i don't use it for a very
+            long time since graduate.</span>
         </div>
       </div>
       <div class="list-card">
         <span class="exp">Web Development</span>
         <div>
-          <h3>NodeJS, ExpressJS, ReactJS, NextJS, Redux,...</h3>
+          <h3>NodeJS, ExpressJS, ReactJS, NextJS, Redux, AntD...</h3>
           <span>all js related, how original (i know)</span>
         </div>
       </div>
@@ -66,7 +67,8 @@
         <span class="exp">Database</span>
         <div>
           <h3>MongoDB</h3>
-          <span>Understand the basic of setting up, managing cluster, sharding, replicas and use aggregation query framewrok</span>
+          <span>Understand the basic of setting up, managing cluster, sharding, replicas and use aggregation query
+            framewrok</span>
         </div>
       </div>
       <div class="list-card">
@@ -80,14 +82,14 @@
     <div class="sections">
       <h2 class="section-title">Experiences</h2>
       <div class="list-card">
-        <span class="exp">JUN 2020 - Now</span>
+        <span class="exp">Jun 2020 to Now</span>
         <div>
           <h3>FPT Telecom International</h3>
           <span>Software Developer</span>
         </div>
       </div>
       <div class="list-card">
-        <span class="exp">DEC 2018 - JUN 2019</span>
+        <span class="exp">Dec 2018 to Jun 2019</span>
         <div>
           <h3>FPT Software</h3>
           <span>Internship</span>
