--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
   <!-- Achievements -->
 
-  <div class="container cards">
+  <!-- <div class="container cards">
     <div>portfolio maybes</div>
     <div class="card">
       <div class="skill-level">
@@ -158,11 +158,11 @@
         <span>like to shoot his guns</span>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Timeeline -->
 
-  <div class="container">
+  <!-- <div class="container">
     <ol class="timeline">
       <li>
         <p class="line">But</p>
@@ -206,7 +206,7 @@
     <span style="font-size: 16px; margin-top: 1">modified by
       <a href="https://www.instagram.com/spring.dieu/">me</a> Sing along
       <a href="https://www.youtube.com/watch?v=PbgKEjNBHqM">here</a></span>
-  </footer>
+  </footer> -->
 </body>
 
 </html>
