--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
       </div>
 
       <h1 class="name"><strong>Đức</strong> Mạnh</h1>
-      <span class="job-title">༼ つ ◕_◕ ༽つ</span>
+      <span class="job-title">༼ つ ◕_◕ ༽つ hire me, please!</span>
       <span class="email">full-time programmer - sometimes writer - all-time clueless</span>
 
       <h2 class="lead">about me...</h2>
       <p>
-        Hi, i'm Đức and currently working as software developer. i graduated from FPT University in 2020. i mostly work
+        Hi, i'm Đức and currently working as a software developer. i graduated from FPT University in 2020. i mostly work
         with JavaScript and stack of technology built around it.
         <br />
         My hobbies include learning new things from the Internet, "consuming" some books, musics and movies (some of
         the most basic stuffs, ¯\_(ツ)_/¯)
         <br />
         Btw, i do <a href="https://duccm4.notion.site/Movies-Reviews-5960a207bc234158a450173d8a2372ff"
-          target="_blank">write</a>
+          target="_blank"><u>write</u></a>
         sometimes
       </p>
     </div>
@@ -67,7 +67,8 @@
         <span class="exp">Database</span>
         <div>
           <h3>MongoDB</h3>
-          <span>Understand the basic of setting up, managing cluster, sharding, replicas and use aggregation query
+          <span>Understand the basic of setting up, managing cluster, sharding, replicas and the use of aggregation
+            query
             framewrok</span>
         </div>
       </div>
@@ -104,6 +105,13 @@
           <span>Bachelor of Software Engineering. 8.1/10</span>
         </div>
       </div>
+      <h2 class="section-title">Vibing (‾◡◝)♪ </h2>
+      <div class="list-card">
+        <iframe src="https://open.spotify.com/embed/playlist/7dI5P0psZVQYmD9VHJIoSR" width="100%" height="80"
+          frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      </div>
+
     </div>
   </div>
 
