--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h3>MongoDB</h3>
           <span>Understand the basic of setting up, managing cluster, sharding, replicas and the use of aggregation
             query
-            framewrok</span>
+            framework</span>
         </div>
       </div>
       <div class="list-card">
