--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
       <h2 class="lead">about me...</h2>
       <p>
-        Hi, i'm Đức and currently working as a software developer. i graduated from FPT University in 2020. i mostly work
+        Hi, i'm Đức and currently working as a software developer. i graduated from FPT University in 2020. i mostly
+        work
         with JavaScript and stack of technology built around it.
         <br />
         My hobbies include learning new things from the Internet, "consuming" some books, musics and movies (some of
@@ -208,13 +209,15 @@
     </ol>
   </div>
 
-  <br /><br />
+  <br /><br /> -->
 
   <footer class="container">
-    <span style="font-size: 16px; margin-top: 1">modified by
-      <a href="https://www.instagram.com/spring.dieu/">me</a> Sing along
-      <a href="https://www.youtube.com/watch?v=PbgKEjNBHqM">here</a></span>
-  </footer> -->
+    <hr />
+    <span>
+      Icons by <a href="https://simpleicons.org/" target="_blank">Simple Icons</a>
+      with the inspiration from <a href="https://thesquareplanet.com/">thesquareplanet</a>
+    </span>
+  </footer>
 </body>
 
 </html>
