start scaffolding tailwind css to project

--- a/index.html
+++ b/index.html
@@ -3,50 +3,62 @@
 
 <head>
   <title>résumé</title>
-  <link rel="stylesheet" type="text/css" href="/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/tailwind.css" />
+  <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
-  <div class="container">
-    <div class="hero">
-      <div class="social">
+  <div class="mx-auto my-14 max-w-6xl mt-5">
+    <div class="flex my-auto relative justify-between">
+      <div>
+        <div class="flex items-center">
+          <span class="text-7xl font-light mr-2"><span class="font-semibold">Đức</span> Mạnh</span>
+          <span class="bg-primary round ml-2 text-primary rounded-md p-4 leading-none h-12 font-semibold text-lg">༼ つ ◕_◕ ༽つ
+            hire me,
+            please!</span>
+        </div>
+        <span class="text-2xl text-custom-gray font-light ">full-time programmer - sometimes writer - all-time clueless</span>
+
+      </div>
+      <div class="flex">
         <a href="https://github.com/oktesting" target="_blank">
-          <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/github.svg" alt="gh" class="icon" />
+          <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/github.svg" alt="gh"
+            class="w-12 h-12 opacity-70 px-2" />
         </a>
         <a href="https://www.linkedin.com/in/duc-manh/" target="_blank">
-          <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/linkedin.svg" alt="li" class="icon" />
+          <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/linkedin.svg" alt="li"
+            class="w-12 h-12 opacity-70 px-2" />
+
         </a>
         <a href="https://www.instagram.com/spring.dieu/" target="_blank">
-          <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/instagram.svg" alt="ig" class="icon" />
+          <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/instagram.svg" alt="ig"
+            class="w-12 h-12 opacity-70 px-2" />
         </a>
         <a href="mailto:duczoz123@gmail.com">
-          <img src="https://thesquareplanet.com/gfx/email.svg" alt="em" class="icon" />
+          <img src="https://thesquareplanet.com/gfx/email.svg" alt="em" class="w-12 h-12 opacity-70 px-2" />
         </a>
       </div>
 
-      <h1 class="name"><strong>Đức</strong> Mạnh</h1>
-      <span class="job-title">༼ つ ◕_◕ ༽つ hire me, please!</span>
-      <span class="email">full-time programmer - sometimes writer - all-time clueless</span>
-
-      <h2 class="lead">about me...</h2>
-      <p>
-        Hi, i'm Đức and currently working as a software developer. i graduated from FPT University in 2020. i mostly
-        work
-        with JavaScript and stack of technology built around it.
-        <br />
-        My hobbies include learning new things from the Internet, "consuming" some books, musics and movies (some of
-        the most basic stuffs, ¯\_(ツ)_/¯)
-        <br />
-        Btw, i do <a href="https://duccm4.notion.site/Movies-Reviews-5960a207bc234158a450173d8a2372ff"
-          target="_blank"><u>write</u></a>
-        sometimes
-      </p>
     </div>
   </div>
-
+  <div class="mx-auto my-14 max-w-6xl">
+    <h2 class="lead">about me...</h2>
+    <p>
+      Hi, i'm Đức and currently working as a software developer. i graduated from FPT University in 2020. i mostly
+      work
+      with JavaScript and stack of technology built around it.
+      <br />
+      My hobbies include learning new things from the Internet, "consuming" some books, musics and movies (some of
+      the most basic stuffs, ¯\_(ツ)_/¯)
+      <br />
+      Btw, i do <a href="https://duccm4.notion.site/Movies-Reviews-5960a207bc234158a450173d8a2372ff"
+        target="_blank"><u>write</u></a>
+      sometimes
+    </p>
+  </div>
   <!-- Skills and intrest section -->
-  <div class="container">
+  <div class="mx-auto my-14 max-w-6xl">
     <div class="sections">
       <h2 class="section-title">Familiar Technologies</h2>
       <div class="list-card">
@@ -211,7 +223,7 @@
 
   <br /><br /> -->
 
-  <footer class="container">
+  <footer class="mx-auto my-14 max-w-6xl">
     <hr />
     <span>
       Icons by <a href="https://simpleicons.org/" target="_blank">Simple Icons</a>
