scaffolding tailwind css to project, still

--- a/index.html
+++ b/index.html
@@ -9,42 +9,45 @@
 </head>
 
 <body>
-  <div class="mx-auto my-14 max-w-6xl mt-5">
+  <div class="container mt-5">
     <div class="flex my-auto relative justify-between">
       <div>
         <div class="flex items-center">
           <span class="text-7xl font-light mr-2"><span class="font-semibold">Đức</span> Mạnh</span>
-          <span class="bg-primary round ml-2 text-primary rounded-md p-4 leading-none h-12 font-semibold text-lg">༼ つ ◕_◕ ༽つ
+          <span class="bg-primary round ml-2 text-primary rounded-md p-4 leading-none h-12 font-semibold text-lg">༼ つ
+            ◕_◕ ༽つ
             hire me,
             please!</span>
         </div>
-        <span class="text-2xl text-custom-gray font-light ">full-time programmer - sometimes writer - all-time clueless</span>
+        <span class="text-2xl text-custom-gray font-light ">full-time programmer - sometimes writer - all-time
+          clueless</span>
 
       </div>
-      <div class="flex">
+      <div class="flex items-start">
         <a href="https://github.com/oktesting" target="_blank">
           <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/github.svg" alt="gh"
-            class="w-12 h-12 opacity-70 px-2" />
+            class="w-12 h-12 opacity-70 px-2 hover:opacity-100" />
         </a>
         <a href="https://www.linkedin.com/in/duc-manh/" target="_blank">
           <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/linkedin.svg" alt="li"
-            class="w-12 h-12 opacity-70 px-2" />
+            class="w-12 h-12 opacity-70 px-2 hover:opacity-100" />
 
         </a>
         <a href="https://www.instagram.com/spring.dieu/" target="_blank">
           <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/instagram.svg" alt="ig"
-            class="w-12 h-12 opacity-70 px-2" />
+            class="w-12 h-12 opacity-70 px-2 hover:opacity-100" />
         </a>
         <a href="mailto:duczoz123@gmail.com">
-          <img src="https://thesquareplanet.com/gfx/email.svg" alt="em" class="w-12 h-12 opacity-70 px-2" />
+          <img src="https://thesquareplanet.com/gfx/email.svg" alt="em"
+            class="w-12 h-12 opacity-70 px-2 hover:opacity-100" />
         </a>
       </div>
 
     </div>
   </div>
-  <div class="mx-auto my-14 max-w-6xl">
-    <h2 class="lead">about me...</h2>
-    <p>
+  <div class="container">
+    <h2 class="text-4xl text-primary">about me...</h2>
+    <p class="text-lg">
       Hi, i'm Đức and currently working as a software developer. i graduated from FPT University in 2020. i mostly
       work
       with JavaScript and stack of technology built around it.
@@ -53,73 +56,77 @@
       the most basic stuffs, ¯\_(ツ)_/¯)
       <br />
       Btw, i do <a href="https://duccm4.notion.site/Movies-Reviews-5960a207bc234158a450173d8a2372ff"
-        target="_blank"><u>write</u></a>
+        target="_blank">write</a>
       sometimes
     </p>
   </div>
+
   <!-- Skills and intrest section -->
-  <div class="mx-auto my-14 max-w-6xl">
-    <div class="sections">
+  <div class="flex container">
+    <div class="w-1/2 mr-5">
       <h2 class="section-title">Familiar Technologies</h2>
-      <div class="list-card">
-        <span class="exp">Languages</span>
-        <div>
-          <h3>JavaScript</h3>
-          <span>And HTML+CSS if u consider them as programming languages. Also some Java but i don't use it for a very
+      <div class="flex">
+        <span class="w-3/12 mr-3 section-sub-title">Languages</span>
+        <div class="w-9/12 ml-3">
+          <h3 class="section-content">JavaScript</h3>
+          <span class="section-content-description">And HTML+CSS if u consider them as programming languages. Also some
+            Java but i don't use it for a very
             long time since graduate.</span>
         </div>
       </div>
-      <div class="list-card">
-        <span class="exp">Web Development</span>
-        <div>
-          <h3>NodeJS, ExpressJS, ReactJS, NextJS, Redux, AntD...</h3>
-          <span>all js related, how original (i know)</span>
+      <div class="flex my-7">
+        <span class="w-3/12 mr-3 section-sub-title">Web Development</span>
+        <div class="w-9/12 ml-3">
+          <h3 class="section-content">NodeJS, ExpressJS, ReactJS, NextJS, Redux, AntD...</h3>
+          <span class="section-content-description">all js related, how original (i know)</span>
         </div>
       </div>
-      <div class="list-card">
-        <span class="exp">Database</span>
-        <div>
-          <h3>MongoDB</h3>
-          <span>Understand the basic of setting up, managing cluster, sharding, replicas and the use of aggregation
+      <div class="flex my-7">
+        <span class="w-3/12 mr-3 section-sub-title">Database</span>
+        <div class="w-9/12 ml-3">
+          <h3 class="section-content">MongoDB</h3>
+          <span class="section-content-description">Understand the basic of setting up, managing cluster, sharding,
+            replicas and the use of aggregation
             query
             framework</span>
         </div>
       </div>
-      <div class="list-card">
-        <span class="exp">Deployment</span>
-        <div>
-          <h3>Docker, Kubernetes</h3>
-          <span>To be honest, i just dived into these technologies and still improving my knowledge</span>
+      <div class="flex my-7">
+        <span class="w-3/12 mr-3 section-sub-title">Deployment</span>
+        <div class="w-9/12 ml-3">
+          <h3 class="section-content">Docker, Kubernetes</h3>
+          <span class="section-content-description">To be honest, i just dived into these technologies and still
+            improving my knowledge</span>
         </div>
       </div>
     </div>
-    <div class="sections">
+    <div class="w-1/2 ml-5">
       <h2 class="section-title">Experiences</h2>
-      <div class="list-card">
-        <span class="exp">Jun 2020 to Now</span>
-        <div>
-          <h3>FPT Telecom International</h3>
-          <span>Software Developer</span>
+      <div class="flex my-7">
+        <span class="w-3/12 mr-3 section-sub-title">Jun 2020 to Now</span>
+        <div class="w-9/12 ml-3">
+          <h3 class="section-content">FPT Telecom International</h3>
+          <span class="section-content-description">Software Developer</span>
         </div>
       </div>
-      <div class="list-card">
-        <span class="exp">Dec 2018 to Jun 2019</span>
-        <div>
-          <h3>FPT Software</h3>
-          <span>Internship</span>
+      <div class="flex my-7">
+        <span class="w-3/12 mr-3 section-sub-title">Dec 2018 to Jun 2019</span>
+        <div class="w-9/12 ml-3">
+          <h3 class="section-content">FPT Software</h3>
+          <span class="section-content-description">Internship</span>
         </div>
       </div>
 
       <h2 class="section-title">Education</h2>
-      <div class="list-card">
-        <span class="exp">2016 - 2020</span>
-        <div>
-          <h3>FPT University</h3>
-          <span>Bachelor of Software Engineering. 8.1/10</span>
+      <div class="flex my-7">
+        <span class="w-3/12 mr-3 section-sub-title">2016 - 2020</span>
+        <div class="w-9/12 ml-3">
+          <h3 class="section-content">FPT University</h3>
+          <span class="section-content-description">Bachelor of Software Engineering. 8.1/10</span>
         </div>
       </div>
       <h2 class="section-title">Vibing (‾◡◝)♪ </h2>
-      <div class="list-card">
+      <div class="">
         <iframe src="https://open.spotify.com/embed/playlist/7dI5P0psZVQYmD9VHJIoSR" width="100%" height="80"
           frameBorder="0" allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
@@ -223,13 +230,10 @@
 
   <br /><br /> -->
 
-  <footer class="mx-auto my-14 max-w-6xl">
-    <hr />
-    <span>
-      Icons by <a href="https://simpleicons.org/" target="_blank">Simple Icons</a>
-      with the inspiration from <a href="https://thesquareplanet.com/">thesquareplanet</a>
-    </span>
-  </footer>
+  <div class="container text-base border-opacity-75 border-t h-10 leading-10 mb-7">
+    Icons by <a href="https://simpleicons.org/" target="_blank">Simple Icons</a>
+    with the inspiration from <a href="https://thesquareplanet.com/">thesquareplanet</a>
+  </div>
 </body>
 
 </html>
