--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
         <div class="flex items-center">
           <span class="text-7xl font-light mr-2 dark:text-primary"><span class="font-semibold">Đức</span> Mạnh</span>
           <span
-            class="bg-primary round ml-2 text-primary rounded-md p-4 leading-none h-12 font-semibold text-lg dark:text-bg-primary dark:bg-text-primary">༼
-            つ
-            ◕_◕ ༽つ
+            class="bg-primary round ml-2 text-primary rounded-md p-4 leading-none h-12 font-semibold text-lg dark:text-bg-primary dark:bg-text-primary">
+            ༼つ◕_◕ ༽つ
             <span id="mode-text">hire me</span>,
             <a href="#" id="toggle-mode-btn">please!</a></span>
         </div>
@@ -55,8 +54,7 @@
       work
       with JavaScript and stack of technology built around it.
       <br />
-      My hobbies include learning new things from the Internet, "consuming" some books, musics and movies (some of
-      the most basic stuffs, ¯\_(ツ)_/¯)
+      My hobbies include learning new things from the Internet, "consuming" some books, gaming, musics and movies (some of the most basic stuffs could be listed, ¯\_(ツ)_/¯)
       <br />
       Btw, i do <a href="https://duccm4.notion.site/Movies-Reviews-5960a207bc234158a450173d8a2372ff"
         target="_blank">write</a>
@@ -233,9 +231,12 @@
 
   <br /><br /> -->
 
-  <div class="container text-base border-opacity-75 border-t h-10 leading-10 mb-7">
-    Icons by <a href="https://simpleicons.org/" target="_blank">Simple Icons</a>
-    with the inspiration from <a href="https://thesquareplanet.com/">thesquareplanet</a>
+  <div class="container flex justify-between text-base border-opacity-75 border-t h-10 leading-10 mb-7">
+    <span>
+      Icons by <a href="https://simpleicons.org/" target="_blank">Simple Icons</a>
+      with the inspiration from <a href="https://thesquareplanet.com/">thesquareplanet</a>
+    </span>
+    <a href="https://github.com/oktesting/oktesting.github.io/commits/dev" target="_b">Development log</a>
   </div>
 </body>
 
