--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <span class="w-3/12 mr-3 section-sub-title">Web Development</span>
         <div class="w-9/12 ml-3">
           <h3 class="section-content">NodeJS, ExpressJS, ReactJS, NextJS, Redux, AntD...</h3>
-          <span class="section-content-description">all js related, how original (i know)</span>
+          <span class="section-content-description">all js related, how original and cliché (i know)</span>
         </div>
       </div>
       <div class="flex my-7">
