change spotify iframe theme by dark or light mode

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </div>
       <h2 class="section-title">Vibing (‾◡◝)♪ </h2>
       <div class="">
-        <iframe src="https://open.spotify.com/embed/playlist/7dI5P0psZVQYmD9VHJIoSR" width="100%" height="80"
+        <iframe id="spotify" src="https://open.spotify.com/embed/playlist/7dI5P0psZVQYmD9VHJIoSR" width="100%" height="80"
           frameBorder="0" allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       </div>
