--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>résumé</title>
   <link rel="stylesheet" type="text/css" href="./assets/tailwind.css" />
+  <link rel="stylesheet" type="text/css" href="./assets/style.scss" />
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="module" src="./assets/index.js"></script>
@@ -16,10 +17,12 @@
         <div class="flex items-center">
           <span class="text-7xl font-light mr-2 dark:text-primary"><span class="font-semibold">Đức</span> Mạnh</span>
           <span
-            class="bg-primary round ml-2 text-primary rounded-md p-4 leading-none h-12 font-semibold text-lg dark:text-bg-primary dark:bg-text-primary">
+            class="w-64 text-center bg-primary round ml-2 text-primary rounded-md py-4 leading-none h-12 font-semibold text-lg dark:text-bg-primary dark:bg-text-primary">
             ༼つ◕_◕ ༽つ
             <span id="mode-text">hire me</span>,
             <a href="#" id="toggle-mode-btn">please!</a></span>
+          <img src="https://www.svgrepo.com/show/206787/star-christmas-tree.svg" alt=""
+            class="w-11 ml-2 opacity-80 dark:opacity-100 hover:opacity-100">
         </div>
         <span class="text-2xl text-custom-gray font-light ">full-time programmer - sometimes writer - all-time
           clueless</span>
@@ -47,6 +50,56 @@
 
     </div>
   </div>
+
+  <div class="container -my-14 flex">
+    <img src="https://www.svgrepo.com/show/184602/christmas-sock-christmas.svg" alt="" class="h-14 w-14">
+    <ul class="lightrope" id="lightrope">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <img src="https://www.svgrepo.com/show/184560/bauble-christmas.svg" alt="" class="h-12 w-12"
+      style="transform: scaleX(-1);">
+  </div>
   <div class="container">
     <h2 class="text-4xl text-primary">about me...</h2>
     <p class="text-lg">
@@ -54,10 +107,11 @@
       work
       with JavaScript and stack of technology built around it.
       <br />
-      My hobbies include learning new things from the Internet, "consuming" some books, gaming, musics and movies (some of the most basic stuffs could be listed, ¯\_(ツ)_/¯)
+      My hobbies include learning new things from the Internet, "consuming" some books, gaming, musics and movies (some
+      of the most basic stuffs could be listed, ¯\_(ツ)_/¯)
       <br />
-      Btw, i do <a href="https://duccm4.notion.site/Movies-Reviews-5960a207bc234158a450173d8a2372ff"
-        target="_blank">write</a>
+      Btw, i do <a class="text-primary"
+        href="https://duccm4.notion.site/Movies-Reviews-5960a207bc234158a450173d8a2372ff" target="_blank">write</a>
       sometimes
     </p>
   </div>
@@ -128,8 +182,8 @@
       </div>
       <h2 class="section-title">Vibing (‾◡◝)♪ </h2>
       <div class="">
-        <iframe id="spotify" src="https://open.spotify.com/embed/playlist/7dI5P0psZVQYmD9VHJIoSR" width="100%" height="80"
-          frameBorder="0" allowfullscreen=""
+        <iframe id="spotify" src="https://open.spotify.com/embed/playlist/7dI5P0psZVQYmD9VHJIoSR" width="100%"
+          height="80" frameBorder="0" allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       </div>
 
