--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="scroll-smooth">
 
 <head>
   <title>résumé</title>
@@ -286,10 +286,19 @@
   <br /><br /> -->
 
   <div class="container flex justify-between text-base border-opacity-75 border-t h-10 leading-10 mb-7">
-    <span>
-      Icons by <a href="https://simpleicons.org/" target="_blank">Simple Icons</a>
-      with the inspiration from <a href="https://thesquareplanet.com/">thesquareplanet</a>
-    </span>
+    <div class="group">
+      <a href="#" id="credit-btn">Credits</a>
+      <ul class="list-disc list-inside hidden" id="credits">
+        <li>Icons by <a href="https://simpleicons.org/" target="_blank">Simple Icons</a></li>
+        <li>Some inspirations from <a href="https://thesquareplanet.com/" target="_blank">thesquareplanet</a></li>
+        <li>Super cool <a href="https://codepen.io/tobyj/pen/QjvEex" target="_blank">Christmas Lights</a> decoration
+          by
+          Toby</li>
+        <li>Open source SVG graphics from <a href="https://www.svgrepo.com/vectors/christmas/multicolor"
+            target="_blank">SVGRepo</a>
+        </li>
+      </ul>
+    </div>
     <a href="https://github.com/oktesting/oktesting.github.io/commits/dev" target="_blank">Development log</a>
   </div>
 </body>
